# Claude

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  plan.md
.claude/: agents.md  settings.json  team-protocol.md  workflow-mode.json
.claude/agents/: architect.md  backend-engineer.md  dev-manager.md  frontend-engineer.md  product-manager.md  qa-engineer.md
.claude/commands/: create-plan.md  document.md  execute.md  explore.md  peer-review.md
.claude/feature-threads/: drag-and-drop-kanban.md  host-macos-app.md  kanban-card-resize-fit-title.md  macos-app.md  ui-package-column-reorder-global-shortcut.md
.claude/skills/blocker/: SKILL.md
.claude/skills/call-agent/: SKILL.md
.github/workflows/: release.yml
commands/: create-issue.md  learning-opportunity.md  review-work.md
taskflow/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json
taskflow-desktop/: package-lock.json  package.json  tsconfig.json  vite.config.ts
taskflow-desktop/src/: main.tsx
taskflow-desktop/src-tauri/: Cargo.toml  tauri.conf.json
taskflow-desktop/src-tauri/capabilities/: default.json
taskflow-desktop/src-tauri/icons/: icon.icns
taskflow-desktop/src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  notifications.rs
taskflow-desktop/src-tauri/src/commands/: ai.rs  app.rs  mod.rs  projects.rs  tasks.rs
taskflow/drizzle/: 0000_outstanding_vin_gonzales.sql  0001_yielding_drax.sql  0002_add_recurrence_fields.sql
taskflow/scripts/: seed.ts
taskflow/src/: instrumentation.ts  middleware.ts
(+69 files in other folders)
